--- a/index.html
+++ b/index.html
@@ -1,93 +1,1 @@
-<!DOCTYPE html>
-<html lang="pt-BR">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Club – O seu canal de música eletrônica</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background: linear-gradient(135deg, #6e00ff, #ff0080);
-      color: white;
-      text-align: center;
-      padding: 2rem;
-    }
-    .logo {
-      max-width: 200px;
-      margin: 0 auto 1rem;
-    }
-    h1 {
-      font-size: 2rem;
-      margin-bottom: 0.5rem;
-    }
-    p.slogan {
-      margin-bottom: 2rem;
-      font-style: italic;
-    }
-    .player-controls button {
-      font-size: 2rem;
-      padding: 1rem 2rem;
-      border: none;
-      border-radius: 50px;
-      cursor: pointer;
-      background: #fff;
-      color: #6e00ff;
-      margin: 0.5rem;
-      transition: transform 0.2s;
-    }
-    .player-controls button:hover {
-      transform: scale(1.1);
-    }
-    .now-playing {
-      margin-top: 1.5rem;
-      font-size: 1.1rem;
-    }
-    audio {
-      display: none;
-    }
-  </style>
-</head>
-<body>
-  <img src="assets/logo.png" alt="My Club Logo" class="logo">
-  <h1>My Club</h1>
-  <p class="slogan">O seu canal de música eletrônica</p>
-
-  <div class="player-controls">
-    <button id="playBtn">▶️ Play</button>
-    <button id="pauseBtn">⏸️ Pause</button>
-  </div>
-
-  <div class="now-playing" id="nowPlaying">Carregando música atual...</div>
-
-  <audio id="audioPlayer" preload="none"></audio>
-
-  <script>
-    const STREAM_URL = "/stream";
-    const API_URL = "/now";
-    const audio = document.getElementById("audioPlayer");
-    audio.src = STREAM_URL;
-
-    document.getElementById("playBtn").addEventListener("click", () => {
-      audio.play();
-    });
-
-    document.getElementById("pauseBtn").addEventListener("click", () => {
-      audio.pause();
-    });
-
-    async function fetchNowPlaying() {
-      try {
-        const response = await fetch(API_URL);
-        const data = await response.json();
-        const song = data?.now_playing?.song?.text || "Ao vivo";
-        document.getElementById("nowPlaying").innerText = `▶️ Agora tocando: ${song}`;
-      } catch (e) {
-        document.getElementById("nowPlaying").innerText = "Não foi possível carregar a faixa atual.";
-      }
-    }
-
-    fetchNowPlaying();
-    setInterval(fetchNowPlaying, 15000);
-  </script>
-</body>
-</html>
+<iframe width="100%" height="330" src="https://superaudio.radio.br/AudioPlayer/myclub?mount=&" border="0" style="border: 0;"></iframe>
