--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
 <iframe width="100%" height="330" src="https://superaudio.radio.br/AudioPlayer/myclub?mount=&" border="0" style="border: 0;"></iframe>
+
+Status: <span data-widget="mcp-stream-status" data-name="myclub" data-online-text="Online" data-offline-text="Offline"></span><br />
+Now Playing: <span data-widget="mcp-custom-text" data-name="myclub" data-format="%nowplaying%"></span><br />
+Connections: <span data-widget="mcp-custom-text" data-name="myclub" data-format="%connections%"></span><br />
+
+<span data-widget="mcp-custom-text" data-name="myclub" data-format="%nowplaying%"></span>
+
+<div data-widget="mcp-recently-played" data-name="myclub" data-limit="5" data-covers="true"></div>
